--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="tp-caption sfb slider tp-resizeme slider" data-x="center" data-hoffset="0"
                                 data-y="320" data-speed="800" data-start="1000" data-easing="Power4.easeOut"
                                 data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">Descargue la presentacion</a>
+                                <a href="#" class="btn btn-info btn-lg  btn-large m-r-10">RFI - Integration Platform</a>
                             </div>
                         </li>
                         <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
@@ -493,8 +493,8 @@
                 <div class="p-t-30 p-b-50">
                     <div class="row">
                         <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
-                            <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
-                                data-src-retina="assets/img/logo2x.png" width="119" height="22" />
+                            <img src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" alt="" data-src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png"
+                                data-src-retina="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" width="119" height="22" />
                             <br />
                             <br />
                             © Frittt Templates.
