--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                                     class="icon-bar"></span><span class="icon-bar"></span>
                             </button>
                             <a href="#" class="navbar-brand compressed">
-                                <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
-                                    data-src-retina="assets/img/logo2x.png" width="119" height="22" /></a>
+                                <img src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" alt="" data-src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png"
+                                    data-src-retina="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" width="400" height="100" /></a>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
