--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                     class="icon-bar"></span><span class="icon-bar"></span>
                             </button>
                             <a href="#" class="navbar-brand">
-                                <img src="assets/img/logo.png" data-src="assets/img/logo.png" data-src-retina="assets/img/logo_2x.png"
-                                    width="119" height="22" alt="" /></a>
+                                <img src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" data-src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" data-src-retina="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png"
+                                    width="400" height="100" alt="" /></a>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
@@ -494,7 +494,7 @@
                     <div class="row">
                         <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
                             <img src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" alt="" data-src="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png"
-                                data-src-retina="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" width="119" height="22" />
+                                data-src-retina="https://jm.jmmb.com/sites/default/files/2023-11/Jmmb_logo-01_0.png" width="400" height="100" />
                             <br />
                             <br />
                             © Frittt Templates.
